NN-978 Align arsonist-peep boxes correctly, were 1px out

--- a/app/components/Bookings/Details/header.scss
+++ b/app/components/Bookings/Details/header.scss
@@ -186,7 +186,7 @@
   }
 
   .flag-arsonist-icon {
-    margin-bottom: 4px;
+    margin-bottom: 5px;
   }
 }
 
